# hook-rs

./: .gitignore  Cargo.toml  rustfmt.toml
src/: callbacks.rs  error.rs  hook_x64.rs  lib.rs
